# mcp

./: .gitignore  README.md
mcp/: server.py
mcp/compile/: CMakeLists.txt  main.cpp  server.py
mcp/server_compile/: server.py
mcp/submodule_list/: server.py
